syntax = "proto3";

package server;
option go_package = "/proto";

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}